--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -4,11 +4,21 @@
         <h1>{{product.name}}</h1>
         <p>${{product.price}}</p>
         <p>{{product.description}}</p>
-        <select class="select-input">
-            <option value="option1">Option 1</option>
-            <option value="option2">Option 2</option>
+        <select class="select-input" #selectValue>
+            <option value=1>1</option>
+            <option value=2>2</option>
+            <option value=3>3</option>
+            <option value=4>4</option>
+            <option value=5>5</option>
+            <option value=6>6</option>
+            <option value=7>7</option>
+            <option value=8>8</option>
+            <option value=9>9</option>
+            <option value=10>10</option>
         </select>
-        <button>Add to cart</button>
+        <br>
+        <button (click)="onClick(selectValue.value)">Add to cart</button>
+        <br>
         <a href="#" class="back-link">Back</a>
     </div>
 </div>
