--- a/src/app/products/product-item/product-item.component.html
+++ b/src/app/products/product-item/product-item.component.html
@@ -1,7 +1,18 @@
-<div class="product-container" routerLink="/detail/{{product.id}}" >
-    <img src="{{product.url}}" class="product-image">
+<div class="product-container" >
+    <img src="{{product.url}}" class="product-image" routerLink="/detail/{{product.id}}" >
     <p>{{product.name}}</p>
     <p>${{product.price}}</p>
-    <select class="select-input"></select>
-    <button>Add to cart</button>
+    <select class="select-input" #selectValue>
+        <option value=1>1</option>
+        <option value=2>2</option>
+        <option value=3>3</option>
+        <option value=4>4</option>
+        <option value=5>5</option>
+        <option value=6>6</option>
+        <option value=7>7</option>
+        <option value=8>8</option>
+        <option value=9>9</option>
+        <option value=10>10</option>
+    </select>
+    <button (click)="onClick(selectValue.value)">Add to cart</button>
 </div>
